setup expo project and lint

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,15 @@
-node_modules/
+node_modules/**/*
+server/node_modules/**/*
 server/secret.js
+.expo/*
+npm-debug.*
+*.jks
+*.p8
+*.p12
+*.key
+*.mobileprovision
+*.orig.*
+web-build/
+
+# macOS
+.DS_Store
