--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "./node_modules/.bin/eslint . --ext .js,.jsx --fix"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.11.0",
     "@react-native-community/masked-view": "^0.1.10",
     "expo": "~38.0.8",
     "expo-status-bar": "^1.0.2",
